# humanoid-robotics-docusource

./: .env.example  .gitignore  .npmignore  AGENTS_AND_SKILLS_DOCUMENTATION.md  AUTHENTICATION_SYSTEM_DOCUMENTATION.md  DOCUSAURUS_INTEGRATION.md  Dockerfile  FIXING_RAG_CHATBOT_ERRORS.md  README.md  RESOLVING_DATABASE_ISSUES.md  RUNNING_FRONTENDS.md  TEXTBOOK_INTEGRATION.md  chatbot-component.js  docker-compose.yml  ingest_textbook.py  pyproject.toml  railway.toml  requirements.txt  test-docusaurus-integration.html  test_complete_auth_flow.py  test_deployment.js  test_user_creation.py
.claude/: settings.local.json
agents/: __init__.py  content_pipeline_agent.py  educational_enhancement_agent.py  response_quality_agent.py
backend/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  agent.py  api.py  check_qdrant_api.py  database.py  embedding_generator.py  ingest_docs.py  logging_service.py  main.py  metadata_lookup_tool.py  middleware.py  models.py  qdrant_config.py  qdrant_operations.py  rag_api.py  rag_tool.py  requirements.txt  schema.sql  test_agent_endpoint.py  test_api_directly.py  test_auth_endpoints.py  test_direct_rag.py  test_final_rag.py  test_llm_connection.py  test_search.py  test_services.py  test_with_context.py  test_with_startup.py  text_chunker.py  vector_search_tool.py
checklists/: requirements.md
frontend/: API_CONFIGURATION.md  index.html  script.js  styles.css
my-website/: .eslintrc.cjs  .prettierrc.cjs  RUNNING_FRONTEND.md  UI_ENHANCEMENTS.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  test_responsive.sh
(+163 files in other folders)
