[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot for book content"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "openai",
    "openai-agent-sdk",
    "fastapi",
    "qdrant-client",
    "psycopg[binary]",
    "uvicorn",
    "python-dotenv",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]